Adjusted the figure (HTML)

--- a/figures/CRUD Diagram.html
+++ b/figures/CRUD Diagram.html
@@ -195,15 +195,6 @@
                             Manufacturer, Supplier, Distributor, Retailer, Technology Provider
                         </div>
                     </div>
-                    <div class="dimension-box">
-                        <div class="dimension-title">
-                            Implementation Scope
-                            <span class="op-indicator"><span class="operation create">CREATE</span></span>
-                        </div>
-                        <div class="characteristics">
-                            Full DPP Implementation, Partial Implementation, Pilot Phase, Legacy System Integration
-                        </div>
-                    </div>
                 </div>
                 
                 <div class="iteration">
@@ -217,17 +208,8 @@
                             Service Provider, Economic Operators
                         </div>
                     </div>
-                    <div class="dimension-box">
-                        <div class="dimension-title">
-                            Implementation Scope
-                            <span class="op-indicator"><span class="operation delete">DELETE</span></span>
-                        </div>
-                        <div class="characteristics" style="text-decoration: line-through; opacity: 0.6;">
-                            Full DPP Implementation, Partial Implementation, Pilot Phase, Legacy System Integration
-                        </div>
-                    </div>
                     <div class="changes">
-                        <strong>Changes:</strong> Dimension changed from "Company Details" to "Organization" after discovering that functional roles were more relevant than descriptive details. Dimension changed from Company Details to Actor Type. Removed Implementation Scope since all companies ultimately go through the same implementation phases.
+                        <strong>Changes:</strong> Dimension changed from "Company Details" to "Actor Type" after discovering that functional roles were more relevant than descriptive details.
                     </div>
                 </div>
                 
